[package]
name = "tunnel-updater"
version = "0.1.2"
authors = ["Vladimir Bulyga <zero@13w.me>"]
description = ""
license = "MIT"
readme = "README.md"

[profile.release]
debug = false

[dependencies]
rocket = "*"
rocket_codegen = "*"

[package.metadata.deb]
maintainer = "Vladimir Bulyga"
copyright = "2018, Vladimir Bulyga<zero@13w.me>"
license-file = ["LICENSE", "4"]
extended-description = """\
descr."""
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/tunnel-updater", "usr/bin/tunnel-updater", "755"],
    ["tunnel-updater.default", "etc/default/tunnel-updater", "644"],
    ["tunnel-updater.service", "lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
